<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".Main2Activity">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:id="@+id/radioNotification"
            android:text="@string/notification_alert"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioToast"
            android:text="@string/toast_alert"/>
    </RadioGroup>

    <Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/radioGroup"
    android:id="@+id/btnOneTime"
    android:text="@string/one_alarm"
    style="@style/Widget.AppCompat.Button.Colored"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnOneTime"
        android:id="@+id/btnRepeating"
        android:text="@string/repeating_alarm"
        style="@style/Widget.AppCompat.Button.Colored"/>

</RelativeLayout>